[metadata]
name = fedsim
description = Generic Federated Learning Simulator
long_description = file: README.rst
long_description_content_type = text/x-rst
url= http:fedsim.xyz
author = Farshid Varno
author_email = fr.varno@gmail.com
license= Apache-2.0,
license_files = LICENSE
# readme = README.rst
platforms = any
classifiers=[
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
        Intended Audience :: Education
        License :: OSI Approved :: Apache Software License
        Operating System :: Unix
        Operating System :: POSIX
        Operating System :: Microsoft :: Windows
        Intended Audience :: Science/Research
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Topic :: Scientific/Engineering
        Topic :: Scientific/Engineering :: Mathematics
        Topic :: Scientific/Engineering :: Artificial Intelligence
        Topic :: Software Development
        Topic :: Software Development :: Libraries
        Topic :: Software Development :: Libraries :: Python Modules
        Topic :: System :: Distributed Computing
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: Utilities,
    ]

project_urls =
    Bug Tracker = https://github.com/varnio/fedism/issues
    Documentation = https://fedsim.readthedocs.io
    Source Code = https://github.com/varnio/fedsim


[options]
packages = find:
install_requires =
    numpy
    click
    sklearn
    tqdm
    torch
    torchvision
    tensorboard
    pyyaml
    logall

python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.entry_points]
fedsim-cli =
    fedsim = scripts.fedsim_cli:main

[options.extras_require]
test =
    pytest>=6.0
    pytest-xdist>=1.31

[build_ext]
inplace = True


[options.packages.find]
include = fedism, scripts, fedism.*, scripts.*




[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist,env

[tool:isort]
force_single_line = True
line_length = 88
known_first_party = fedsim
default_section = THIRDPARTY
forced_separate = test_fedsim
skip = .tox,.eggs,ci/templates,build,dist
